DLang.Tests/Tests/errors/semantic/invalid_function_call.d
var f := func(x, y) => x + y;
f(1);
